--- a/src/app/shared/atoms/lb-pin-name/lb-pin-name.component.html
+++ b/src/app/shared/atoms/lb-pin-name/lb-pin-name.component.html
@@ -1,1 +1,7 @@
-<p>lb-pin-name works!</p>
+<div
+  class="sb-pin-name"
+  [ngStyle]="{ 'max-width': maxWidth }"
+  (click)="onClick.emit($event)"
+>
+  <span [style]="{ '-webkit-line-clamp': rowDisplay }">{{ label }}</span>
+</div>
