--- a/src/app/shared/atoms/btn-common/btn-common.component.html
+++ b/src/app/shared/atoms/btn-common/btn-common.component.html
@@ -1,1 +1,8 @@
-<p>btn-common works!</p>
+<button
+  type="button"
+  (click)="onClick.emit($event)"
+  [ngClass]="classes"
+  [ngStyle]="{ 'background-color': backgroundColor }"
+>
+  {{ label }}
+</button>
