Add new Atoms and create header

--- a/src/app/shared/atoms/btn-common/btn-common.component.html
+++ b/src/app/shared/atoms/btn-common/btn-common.component.html
@@ -1,6 +1,7 @@
 <button
   type="button"
   (click)="onClick.emit($event)"
+  [disabled]="disabled"
   [ngClass]="classes"
   [ngStyle]="{ 'background-color': backgroundColor }"
 >
