[CD]Create new atoms item and new molecules item

--- a/src/app/shared/atoms/btn-common/btn-common.component.html
+++ b/src/app/shared/atoms/btn-common/btn-common.component.html
@@ -2,8 +2,6 @@
   type="button"
   (click)="onClick.emit($event)"
   [disabled]="disabled"
-  [ngClass]="classes"
-  [ngStyle]="{ 'background-color': backgroundColor }"
->
+  [ngClass]="classes">
   {{ label }}
 </button>
