--- a/src/app/shared/atoms/img-avatar/img-avatar.component.html
+++ b/src/app/shared/atoms/img-avatar/img-avatar.component.html
@@ -14,6 +14,6 @@
     ></path>
   </svg>
   <ng-template #image>
-    <img src="{{ imgSource }}" />
+    <img src="{{ imageUrl }}" />
   </ng-template>
 </a>
