--- a/src/app/shared/atoms/btn-source/btn-source.component.html
+++ b/src/app/shared/atoms/btn-source/btn-source.component.html
@@ -1,4 +1,6 @@
-<button mat-flat-button class="btn-source" (click)="onClick.emit($event)">
-  <mat-icon class="material-icons-outlined">arrow_back</mat-icon>
-  <span class="content">{{ label }}</span>
-</button>
+<div style="display: block; width: 100%;">
+  <button mat-flat-button class="btn-source" (click)="onClick.emit($event)">
+    <mat-icon class="material-icons-outlined">arrow_back</mat-icon>
+    <span class="content">{{ label | link}}</span>
+  </button>
+</div>
