--- a/src/styles.scss
+++ b/src/styles.scss
@@ -89,7 +89,7 @@ body {
   --g-colorTransparentWhite: hsla(0, 0%, 100%, 0.8);
   --g-colorTransparentGray60: rgba(0, 0, 0, 0.06);
   --g-colorTransparentGray100: rgba(0, 0, 0, 0.1);
-  --g-colorTransparentGray500: rgba(0, 0, 0, 0.1);
+  --g-colorTransparentGray500: rgba(0, 0, 0, 0.5);
   --g-colorTransparentGray800: rgba(0, 0, 0, 0.8);
 
   --g-text-font-size-1: 12px;
@@ -235,4 +235,8 @@ body {
   --space-negative-600: -64px;
 
   --border-blue-active: 0 0 0 4px rgb(0 132 255 / 50%);
+
+  --g-pinFont: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen-Sans, Ubuntu, Cantarell, Fira Sans,
+  Droid Sans, Helvetica Neue, Helvetica, ヒラギノ角ゴ Pro W3, Hiragino Kaku Gothic Pro, メイリオ, Meiryo,
+  ＭＳ Ｐゴシック, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
 }
