--- a/src/app/shared/molecules/pin-item-detail/pin-item-detail.component.html
+++ b/src/app/shared/molecules/pin-item-detail/pin-item-detail.component.html
@@ -23,9 +23,15 @@
             </a>
             <a class="name">
                 <h1>
-                    {{pin.caption}}
+                    {{pin.imageTitle}}
                 </h1>
             </a>
+            <div class="description">
+                <span>
+                    {{pin.imageDescription}}
+                </span>
+                <div>Khác</div>
+            </div>
         </figcaption>
     </mat-card-content>
 </mat-card>
