--- a/src/app/shared/molecules/pin-item-detail/pin-item-detail.component.scss
+++ b/src/app/shared/molecules/pin-item-detail/pin-item-detail.component.scss
@@ -23,7 +23,7 @@ mat-card-content {
         display: flex;
         flex-direction: column;
         align-items: center;
-        .top-control-wrapper{
+        .top-control-wrapper {
             padding-top: 32px;
             min-height: 72px;
             width: 100%;
@@ -41,7 +41,7 @@ mat-card-content {
                 }
             }
         }
-        
+
         .source {
             font-size: var(--g-text-font-size-3);
             font-weight: 400;
@@ -65,7 +65,22 @@ mat-card-content {
             margin-bottom: 0;
             margin-top: 16px;
             font-family: var(--g-pinFont);
-            line-height: 45px;
+            line-height: 48px;
+        }
+        .description {
+            margin-top: 12px;
+            width: 100%;
+            span {
+                font-size: var(--g-text-font-size-2);
+                word-wrap: break-word;
+                font-weight: 400;
+                color: var(--g-colorGray300);
+                cursor: default;
+                font-family: var(--g-pinFont);
+                -webkit-font-smoothing: antialiased;
+                line-height: 19px;
+                display: block;
+            }
         }
     }
 }
