--- a/src/app/shared/molecules/pin-item/pin-item.component.scss
+++ b/src/app/shared/molecules/pin-item/pin-item.component.scss
@@ -66,7 +66,7 @@
 figcaption {
     padding: 8px 6px 16px;
     // height: 66px;
-    .caption {
+    .image-title {
         font-size: var(--g-text-font-size-2);
         -webkit-box-orient: vertical;
         display: -webkit-box;
