--- a/src/app/shared/atoms/txb-common/txb-common.component.html
+++ b/src/app/shared/atoms/txb-common/txb-common.component.html
@@ -1,6 +1,12 @@
-<mat-form-field [ngClass]="classes" appearance="fill" [ngStyle]="{'max-width': maxWidth}">
+<mat-form-field cdkTextareaAutosize [ngClass]="classes" appearance="fill" [ngStyle]="{'max-width': maxWidth}" [attr.disabled]="disabled">
     <mat-icon class="material-icons-outlined" id="icon_search">search</mat-icon>
-    <input ngDefaultControl fieldName="field" matInput type="text" [(ngModel)]="content" (ngModelChange)="contentChange.emit($event)">
-    <mat-icon class="material-icons" id="icon_cancel" [ngStyle]="{'display': content.length > 0 ? 'unset': 'none'}" (click)="contentChange.emit('')">
+    <input *ngIf="mode !=='textarea'; else textarea" ngDefaultControl fieldName="field" matInput type="text"
+        [(ngModel)]="content" (ngModelChange)="contentChange.emit($event)" [disabled]="disabled">
+    <ng-template #textarea>
+        <textarea ngDefaultControl fieldName="field" matInput type="text" [(ngModel)]="content"
+            (ngModelChange)="contentChange.emit($event)" [disabled]="disabled"></textarea>
+    </ng-template>
+    <mat-icon class="material-icons" id="icon_cancel" [ngStyle]="{'display': content.length > 0 ? 'unset': 'none'}"
+        (click)="contentChange.emit('')">
         cancel</mat-icon>
 </mat-form-field>
